# ImageProcessingLibrary

./: CMakeLists.txt  README.md
include/gray_level_transform/: gray_level_transform.hpp
src/: main.cpp
src/gray_level_transform/: main.cpp
